# sample-aws-whats-new-analyzer

./: .gitignore  CONTRIBUTING.md  README.md  cdk.json  config.ts  package-lock.json  package.json
lib/: evaluation-stack.ts  foundation-stack.ts  frontend-stack.ts  ingestion-stack.ts  log-retention-setter.ts  nag-suppressions.ts
lib/agents/: prompts.ts
scripts/: delete-app.sh  project-setup.sh
src/agents/awana/: README.md  agent.py  pyproject.toml  requirements.txt
src/billing/: index.py
src/consolidation/: index.py
src/crawlers/whats-new-crawler/: index.py  requirements.txt
src/crawlers/whats-new-crawler/dlq-handler/: index.py
src/evaluation/: index.py
src/frontend/: cf-auth-function.js
src/frontend/accounts/: index.py
src/frontend/cors-updater/: index.py
src/frontend/edge-auth/: index.py
src/frontend/feedback-analyst/: index.py  requirements.txt
src/frontend/preferences/: index.py
src/frontend/register-central-account/: index.py
src/frontend/results/: index.py
src/frontend/website/: app.js  auth.js  index.html  style.css
src/processor/: index.py
src/resource-inventory/: index.py
