[project]
name = "awana"
version = "0.1.0"
description = "AWS Content Recommendation Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bedrock-agentcore>=1.0.0",
    "fastapi>=0.120.0",
    "pydantic>=2.12.3",
    "strands-agents>=1.13.0",
    "uvicorn[standard]>=0.38.0",
]